src/test/deca/context/valid/set_attributes_in_main.deca
// Test pour assigner la valeur des attributs dans le main

class Person{
    int age;
}

{
    Person Jean = new Person();
    Jean.age = 12;
}