src/test/deca/context/invalid/inst_return_in_method_in_main.deca
// Test la règle 3.24: Pas le droit de return dans un main

{
    int x = 5;
    return x;
}



// Resultat:

//TODOTEST